@@ -4,7 +4,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-import java.util.Arrays;
+import java.time.Duration;
 import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -18,23 +18,24 @@ import trip.Trip;
 
 class DestinationTerminalTest {
 
+	// TODO: REFACTORIZAR POR HERENCIA
+
 	private ManagedTerminal buenosAires;
+	// -------------------------------------------------------------
+	private Terminal guayaquil;
+	private Terminal montevideo;
+	private Terminal lima;
+	private Terminal valparaiso;
+	// ------------------------------------------------------------
+	private Stretch buenosAiresValparaiso;
+	private Stretch valparaisoLima;
+	private Stretch limaGuayaquil;
+	private Stretch guayaquilBuenosAires;
+	private Stretch montevideoBuenosAires;
+	private Stretch limaMontevideo;
 	// -------------------------------------------------------------
 	private MaritimeCircuit maritimeCircuitOne;
 	private MaritimeCircuit maritimeCircuitTwo;
-	// -------------------------------------------------------------
-	private Stretch buenosAiresSantiago;
-	private Stretch santiagoQuito;
-	private Stretch quitoLima;
-	private Stretch limaCaracas;
-	private Stretch caracasBuenosAires;
-	private Stretch santiagoLima;
-	// -------------------------------------------------------------
-	private Terminal santiago;
-	private Terminal quito;
-	private Terminal lima;
-	private Terminal caracas;
-	private Terminal rioDeJaneiro;
 	// -------------------------------------------------------------
 	private Trip tripOne;
 	private Trip tripTwo;
@@ -45,77 +46,89 @@ class DestinationTerminalTest {
 	void setUp() {
 		// MANAGED TERMINAL
 		buenosAires = mock(ManagedTerminal.class);
-		// -------------------------------------------------------------
+		// ------------------------------------------------------------------------------------------
+		// TERMINAL
+		guayaquil = mock(Terminal.class);
+		montevideo = mock(Terminal.class);
+		lima = mock(Terminal.class);
+		valparaiso = mock(Terminal.class);
+		// ------------------------------------------------------------------------------------------
+		// STRETCH
+		buenosAiresValparaiso = mock(Stretch.class);
+		when(buenosAiresValparaiso.getOrigin()).thenReturn(buenosAires);
+		when(buenosAiresValparaiso.getDestiny()).thenReturn(valparaiso);
+		when(buenosAiresValparaiso.getTime()).thenReturn(Duration.ofHours(13));
+
+		valparaisoLima = mock(Stretch.class);
+		when(valparaisoLima.getOrigin()).thenReturn(valparaiso);
+		when(valparaisoLima.getDestiny()).thenReturn(lima);
+		when(valparaisoLima.getTime()).thenReturn(Duration.ofHours(9));
+
+		limaGuayaquil = mock(Stretch.class);
+		when(limaGuayaquil.getOrigin()).thenReturn(lima);
+		when(limaGuayaquil.getDestiny()).thenReturn(guayaquil);
+		when(limaGuayaquil.getTime()).thenReturn(Duration.ofHours(6));
+
+		guayaquilBuenosAires = mock(Stretch.class);
+		when(guayaquilBuenosAires.getOrigin()).thenReturn(guayaquil);
+		when(guayaquilBuenosAires.getDestiny()).thenReturn(buenosAires);
+		when(guayaquilBuenosAires.getTime()).thenReturn(Duration.ofHours(36));
+
+		montevideoBuenosAires = mock(Stretch.class);
+		when(montevideoBuenosAires.getOrigin()).thenReturn(montevideo);
+		when(montevideoBuenosAires.getDestiny()).thenReturn(buenosAires);
+		when(montevideoBuenosAires.getTime()).thenReturn(Duration.ofHours(7));
+
+		limaMontevideo = mock(Stretch.class);
+		when(limaMontevideo.getOrigin()).thenReturn(lima);
+		when(limaMontevideo.getDestiny()).thenReturn(montevideo);
+		when(limaMontevideo.getTime()).thenReturn(Duration.ofHours(3));
+		// ------------------------------------------------------------------------------------------
 		// MARITIME CIRCUIT
 		maritimeCircuitOne = mock(MaritimeCircuit.class);
-		when(maritimeCircuitOne.getStretchs()).thenReturn(
-				Arrays.asList(buenosAiresSantiago, santiagoQuito, quitoLima, limaCaracas, caracasBuenosAires));
+		when(maritimeCircuitOne.getStretches())
+				.thenReturn(List.of(montevideoBuenosAires, buenosAiresValparaiso, valparaisoLima, limaMontevideo));
 
 		maritimeCircuitTwo = mock(MaritimeCircuit.class);
-		when(maritimeCircuitTwo.getStretchs())
-				.thenReturn(Arrays.asList(buenosAiresSantiago, santiagoLima, limaCaracas, caracasBuenosAires));
-		// -------------------------------------------------------------
-		// STRETCH
-		buenosAiresSantiago = mock(Stretch.class);
-		when(buenosAiresSantiago.getOrigin()).thenReturn(buenosAires);
-		when(buenosAiresSantiago.getDestiny()).thenReturn(santiago);
-
-		santiagoQuito = mock(Stretch.class);
-		when(santiagoQuito.getOrigin()).thenReturn(santiago);
-		when(santiagoQuito.getDestiny()).thenReturn(quito);
-
-		quitoLima = mock(Stretch.class);
-		when(quitoLima.getOrigin()).thenReturn(quito);
-		when(quitoLima.getDestiny()).thenReturn(lima);
-
-		limaCaracas = mock(Stretch.class);
-		when(limaCaracas.getOrigin()).thenReturn(lima);
-		when(limaCaracas.getDestiny()).thenReturn(caracas);
-
-		caracasBuenosAires = mock(Stretch.class);
-		when(caracasBuenosAires.getOrigin()).thenReturn(caracas);
-		when(caracasBuenosAires.getDestiny()).thenReturn(buenosAires);
-
-		santiagoLima = mock(Stretch.class);
-		when(santiagoLima.getOrigin()).thenReturn(buenosAires);
-		when(santiagoLima.getDestiny()).thenReturn(santiago);
-		// -------------------------------------------------------------
-		// TERMINAL
-		santiago = mock(Terminal.class);
-		quito = mock(Terminal.class);
-		lima = mock(Terminal.class);
-		caracas = mock(Terminal.class);
-		rioDeJaneiro = mock(Terminal.class);
-		// -------------------------------------------------------------
+		when(maritimeCircuitTwo.getStretches())
+				.thenReturn(List.of(buenosAiresValparaiso, valparaisoLima, limaGuayaquil, guayaquilBuenosAires));
+		// ------------------------------------------------------------------------------------------
 		// TRIP
 		tripOne = mock(Trip.class);
 		when(tripOne.getMaritimeCircuit()).thenReturn(maritimeCircuitOne);
-		when(tripOne.hasADestinyTerminal(quito)).thenReturn(true);
 
 		tripTwo = mock(Trip.class);
 		when(tripTwo.getMaritimeCircuit()).thenReturn(maritimeCircuitTwo);
-		when(tripTwo.hasADestinyTerminal(quito)).thenReturn(false);
 		// -------------------------------------------------------------
-		destinationTerminal = new DestinationTerminal(quito);
+		destinationTerminal = new DestinationTerminal(lima);
 	}
 
 	@Test
-	void testAArrivalDateIsCreated() {
+	void testShouldReturnCorrectTerminalForDestinationTerminal() {
+		assertEquals(lima, destinationTerminal.getTerminal());
+	}
+
+	@Test
+	void testShouldFilterTripsWithMatchingTerminals() {
+		// Set Up
+		when(tripOne.hasTerminal(lima)).thenReturn(true);
+
+		when(tripTwo.hasTerminal(lima)).thenReturn(true);
 		// Assert
-		assertEquals(quito, destinationTerminal.getDestiny());
+		assertEquals(List.of(tripOne, tripTwo), destinationTerminal.filterTrips(List.of(tripOne, tripTwo)));
 	}
 
 	@Test
-	void testTheDestinyIsTheSameAsTheOneYouAreLookingFor() {
-		assertEquals(List.of(tripOne), destinationTerminal.filterTrips(List.of(tripOne, tripTwo)));
-	}
+	void testShouldFilterTripsWithSpecificTerminalExcludingOthers() {
+		// Set Up
+		when(tripOne.hasTerminal(guayaquil)).thenReturn(false);
 
-	@Test
-	void testTheDestinyIsNotTheSameAsTheOneYouAreLookingFor() {
-		// Exercise
-		destinationTerminal.setDestiny(rioDeJaneiro);
+		when(tripTwo.hasTerminal(guayaquil)).thenReturn(true);
+
+		destinationTerminal.setTerminal(guayaquil);
+
 		// Assert
-		assertEquals(List.of(), destinationTerminal.filterTrips(List.of(tripOne, tripTwo)));
+		assertEquals(List.of(tripTwo), destinationTerminal.filterTrips(List.of(tripOne, tripTwo)));
 	}
 
 }
